--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OPENAI_API_KEY = 'xk-22e50e8b7c5328de83d2cb97e02ef507965aa9802285049b'
-OPENAI_BASE_URL = 'https://openai.zhixueyouke.cn/v1/'
+OPENAI_API_KEY = ''
+OPENAI_BASE_URL = ''
 
 EMBEDDINGS_MODEL = 'openai'
 OPENAI_EMBEDDINGS_MODEL = 'text-embedding-ada-002'
