--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OPENAI_API_KEY = 'xk-22e50e8b7c5328de83d2cb97e02ef507965aa9802285049b'
-OPENAI_BASE_URL = 'https://openai.zhixueyouke.cn/v1/'
+OPENAI_API_KEY = ''
+OPENAI_BASE_URL = ''
 
 EMBEDDINGS_MODEL = 'openai'
 OPENAI_EMBEDDINGS_MODEL = 'text-embedding-ada-002'
@@ -14,9 +14,4 @@ VERBOSE = True
 
 NEO4J_URI='neo4j://localhost:7687'
 NEO4J_USERNAME='neo4j'
-NEO4J_PASSWORD='885463Du'
-
-LANGCHAIN_TRACING_V2=true
-LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
-LANGCHAIN_API_KEY="<your langsmith api key>"
-LANGCHAIN_PROJECT="pt-best-seat-27"
+NEO4J_PASSWORD=''
