--- a/.env
+++ b/.env
@@ -10,8 +10,10 @@ OPENAI_LLM_MODEL = 'gpt-3.5-turbo-1106'
 TEMPERATURE = 0
 MAX_TOKENS = 1000
 
-VERBOSE = True
+VERBOSE = False
 
-NEO4J_URI='neo4j://localhost:7687'
-NEO4J_USERNAME='neo4j'
+NEO4J_URI=''
+NEO4J_USERNAME=''
 NEO4J_PASSWORD=''
+
+
