--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OPENAI_API_KEY = ''
-OPENAI_BASE_URL = ''
+OPENAI_API_KEY = 'sk-VTwEpCKjKHUjg2yc8b9a29423cD64320A4FaDe4800677b36'
+OPENAI_BASE_URL = 'https://api.mixrai.com/v1'
 
 EMBEDDINGS_MODEL = 'openai'
 OPENAI_EMBEDDINGS_MODEL = 'text-embedding-ada-002'
@@ -12,8 +12,12 @@ MAX_TOKENS = 1000
 
 VERBOSE = False
 
-NEO4J_URI=''
-NEO4J_USERNAME=''
-NEO4J_PASSWORD=''
+NEO4J_URI='neo4j://localhost:7687'
+NEO4J_USERNAME='neo4j'
+NEO4J_PASSWORD='885463Du'
 
 
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_API_KEY="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"
+LANGCHAIN_PROJECT="pr-rundown-density-90"
